# poker-solver

./: .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  main.py  modal_app.py  pyproject.toml
config/: README.md  default.yaml  fast_test.yaml  full_training.yaml  production.yaml  quick_test.yaml
config/abstraction/: README.md  default.yaml  default_plus.yaml  fast_test.yaml  production.yaml  production_xl.yaml  quick_test.yaml
config/abstractions/: production.yaml
config/equity_buckets/: fast_test.yaml
config/training/: dcfr_test.yaml  default.yaml  example.yaml  fast_test.yaml  full_training.yaml  production.yaml  production_xl.yaml  profiling.yaml  quick_test.yaml
data/equity_buckets/: .registry.json
scripts/: analyze_profile.py  cli.py  debug_canonical.py  debug_parallel_training.py  evaluate.py  precompute_equity_buckets.py  preflop_chart.py  profile_merge.py  query_strategy.py  test_mini_precompute.py  test_precompute.py  test_precompute_small.py  test_real_merge.py  train.py  train_and_show.py  verify_learning.py
src/abstraction/: abstraction_metadata.py  action_abstraction.py  board_clustering.py  card_abstraction.py  card_utils.py  clustering.py  constants.py  equity_bucketing.py  equity_calculator.py  infoset.py  manager.py  metadata.py  parallel_equity.py  precompute.py  preflop_hands.py  registry.py  validation.py
src/actions/: __init__.py  action_model.py  betting_actions.py
src/api/: app.py  chart_service.py
src/bucketing/: __init__.py  base.py  config.py
src/chart/: __init__.py  data.py
src/cli/: __main__.py  app.py  chart_data.py  chart_handler.py  chart_server.py  combo_handler.py  config_handler.py  equity_verification_handler.py  precompute_handler.py  training_handler.py
src/evaluation/: README.md  exploitability.py  head_to_head.py  statistics.py
src/game/: actions.py  evaluator.py  rules.py  state.py
src/pipeline/: services.py
src/search/: __init__.py  action_translation.py  leaf_values.py  range_inference.py  resolver.py  tree_builder.py
src/shared/: action_tokens.py  checkpoint_profile.py  config.py  config_loader.py  dicts.py  gitinfo.py  jsonio.py  log.py  numeric.py  orchestration_log.py  units.py
src/solver/: base.py  infoset_encoder.py  mccfr.py  storage.py
src/training/: README.md  abstraction_resolver.py  builders.py  checkpoint.py  checkpoint_manager.py  components.py  metadata.py  metrics.py  metrics_reporter.py  orchestrator.py  parallel.py  parallel_manager.py  parallel_protocol.py  (+8 more)
tests/: test_helpers.py
ui/: index.html  package-lock.json  package.json
(+448 files in other folders)
