[project]
name = "poker-solver"
version = "0.1.0"
description = "Heads-Up No-Limit Hold'em solver using Monte Carlo CFR"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Matteo Pesenti" }
]
dependencies = [
    "numpy>=1.24.0",
    "treys>=0.1.0",
    "pyyaml>=6.0",
    "h5py>=3.8.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
optimization = [
    "matplotlib>=3.7.0",
    "numba>=0.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
